@@ -36,6 +36,7 @@ danbp			danpb@nospam.postmaster.co.uk
 Dave Brolley		brolley@redhat.com
 Dave Morrison		dave@bnl.gov
 David A. Swierczek	swiercze@mr.med.ge.com
+David Pashley		david@davidpashley.com
 David Zaroski		cz253@cleveland.Freenet.Edu
 Dean Povey		dpovey@wedgetail.com
 Derek R. Price		derek.price@openavenue.com
