@@ -1,3 +1,11 @@
+2002-05-24  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
+	For PR automake/323:
+	* m4/depend.m4: Missing comma.
+	* tests/gcj4.test: New file.
+	* tests/Makefile.am (TESTS): Add gcj4.test.
+	Reported by David Pashley.
+
 2002-05-14  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
 	Fix for PR automake/322:
